<resources>
    <string name="app_name">Deckard Cain\'s Dice Rolling App</string>
    <string name="action_roll">Roll</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="action_stop">Stop</string>
    <string name="dice_one">1</string>
    <string name="add_one">Add one</string>
    <string name="subtract_one">Subtract one</string>
    <string name="roll">Roll</string>
    <string name="picker">Choose Die Type</string>
    <string name="_18">18</string>
    <string name="dice_settings">Dice Settings</string>
    <string name="select_the_color_of_your_dice">Select the color of your dice:</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="select_the_roll_duration">Select the roll duration:</string>
    <string name="short_text">Short</string>
    <string name="medium_text">Medium</string>
    <string name="long_text">Long</string>
    <string name="select_the_value_of_your_dice">Select the value of your dice:</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_20">20</string>
    <string name="return_text">Return</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_blurb">In the spirit of the Diablo 2 remake, please enjoy my free dice-rolling app.</string>
    <string name="roll_image">roll image</string>
    <string name="roll_blurb">Use this to roll the dice, or you can swipe with your finger!</string>
    <string name="stop_image">stop image</string>
    <string name="stop_blurb">Use this to stop the roll at anytime (if you are the superstitious type).</string>
    <string name="overflow_image">overflow image</string>
    <string name="overflow_blurb">Use this to change the amount of dice that are displayed on screen.</string>
    <string name="dice_settings_image">dice settings image</string>
    <string name="dice_settings_blurb">Use this for settings like die color, roll duration, and die value!</string>
</resources>