<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_view"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dgl114.improveddiceroller.MainActivity"
    android:background="@color/burgundy">

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/dice_one"
        app:tint="@color/colorDice"
        android:src="@drawable/dice_6" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/dice_one"
        app:tint="@color/colorDice"
        android:src="@drawable/dice_6" />

    <ImageView
        android:id="@+id/dice3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/dice_one"
        app:tint="@color/colorDice"
        android:src="@drawable/dice_6" />


</LinearLayout>

     <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_dice_multiple"
         app:layout_anchorGravity="bottom|right|end"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="18dp"
         android:onClick="onFabClick"
         android:contentDescription="@string/dice_settings" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_18"
        android:textSize="22sp"
        app:layout_anchorGravity="bottom|left|end"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="18dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>